syntax = "proto3";

package currency;

option java_multiple_files = true;
option java_package = "com.example.currency.proto";
option java_outer_classname = "CurrencyConverterProto";

service CurrencyConverter {
  rpc ConvertCurrency(ConvertRequest) returns (ConvertResponse);
}

message ConvertRequest {
  double amount = 1;
  string from_currency = 2;
  string to_currency = 3;
}

message ConvertResponse {
  double converted_amount = 1;
}
